TEST: improved the tests for friends
